# HomeBrewKettle-IoT

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
app/ADC/: CMakeLists.txt  PinADC1.cpp  PinADC1.h  adc.c  adc.h
app/HMI/: CMakeLists.txt  hmi.c  hmi.h
app/HTTP/: CMakeLists.txt  http_client.c  http_client.h
app/JSON_HELPER/: CMakeLists.txt  json_helper.c  json_helper.h
app/MASHING_CONTROL/: mashing_control.h
app/PINOUT/: CMakeLists.txt  PinOutput.cpp  Pinout.h  gpio.h
app/PROCESS_CONTROL/: ProcessControl.h  Recipe.h  RecipeStage.h
app/SENSORS/: CMakeLists.txt  lm35.cpp  lm35.h
app/SSD1306/: CMakeLists.txt  ssd1306_i2c.c  ssd1306_spi.c
app/STATE_MACHINE/: CMakeLists.txt  StateMachine.cpp  StateMachine.h  state_machine.h
app/STATISTICS/: statistics.cpp
app/WIFI/: CMakeLists.txt  wifi.c  wifi.h
core/: CMakeLists.txt
core/Inc/: main.h
core/Inc/Src/: main.cpp
core/Src/: main.c  main.cpp
lib/GENERAL/: general.h
lib/GPIO/: gpio.h
lib/MEASUREMENT/: lm35.h  mesurement_stats.h
lib/PubSub/: PubSubClient.cpp  PubSubClient.h
main/: main.cpp  main.h
src/: lm35.cpp  main.cpp  mesurement_stats.cpp
tests/prescaler_tests/: README.md  serial_test_measure_prescaler_380.txt  serial_test_measure_prescaler_488.txt  serial_test_measure_prescaler_600.txt  serial_test_measure_prescaler_930.txt  serial_test_measure_prescaler_972.txt  serial_test_measure_prescaler_982.txt
